--- a/index.html
+++ b/index.html
@@ -1,35 +1,41 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+<head>
+  <meta charset="utf-8">
+  <title>Simon</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+</head>
 
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
+<body>
+  <h1 id="level-title">Press A Key to Start</h1>
+  <div class="container">
+    <div lass="row">
 
-<!-- TODO 4: Add titles/subtitles etc. -->
+      <div type="button" id="green" class="btn green">
 
-<!-- TODO 5: Add a link to the project pages -->
+      </div>
 
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
+      <div type="button" id="red" class="btn red">
 
-<!-- TODO 7: Add the Contact Me and About Me page links --> 
-<!DOCTYPE>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>First Website</title>
-    </head>
-    <body>
-        <h1>Winny's First Portfolio</h1>
-        <h2>I am a begineer</h2>
-        <hr />
-        
-        <h3><a href="./public/movie-ranking.html">MOVIE RANKING PROJECT</a></h3>
-        <img height="400" src="./assets/images/movies.png" alt="movie ranking project" /><br>
-        <h3><a href="./public/birthday-invite.html"><strong>BIRTHDAY INVITE PROJECT></a></h3>
-        <img src="./assets/images/Birthdayinvite.png" alt="birthday invite project" height="400"/>
-        <hr />
-        <a href="./public/about.html">About Me</a>
-        <a href="./public/contact.html">Contact me</a>
-    </body>
+      </div>
+    </div>
+
+    <div class="row">
+
+      <div type="button" id="yellow" class="btn yellow">
+
+      </div>
+      <div type="button" id="blue" class="btn blue">
+
+      </div>
+
+    </div>
+
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="./game.js" charset="UTF-8"></script>
+</body>
+
 </html>
